--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       scroll down for youtube. (coming soon. 😩😩😩 for now just use a virtual  site within the same site!)
    </p>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <iframe src="https://enderkid5481.github.io/" height="640" width="1300">
+  <iframe src="https://enderkid5481.github.io" height="640" width="1300">
 </iframe>
 
 
