--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       scroll down for youtube. (coming soon. 😩😩😩 for now just use a virtual  site within the same site!)
    </p>
    <p>
-     for now enjoy just watching the clock and waiting. 😈
+     for now enjoy just watching the clock and wait. 😈
    </p>
    
 <canvas id="canvas" width="400" height="400"
