--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <br>
     <br>
     <p>
-      scroll down for youtube. (coming soon. 😩😩😩 for now just use a virtual  site within the same site!)
+      POOP!
    </p>
    <p>
      for now enjoy just watching the clock and wait. 😈
