--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ function drawHand(ctx, pos, length, width) {
   
   
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <iframe src="https://www.youtube.com/" height="640" width="1300">
+  <iframe src="https://www.w3schools.com" height="640" width="1300">
 </iframe>
 
 
